fix: update line height heading xl values to improve readability

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
 
   /* Heading XL - 80px, 80px line, -1 character spacing */
   --font-size-heading-xl: clamp(3rem, 5vw + 2rem, 5rem);
-  --line-height-heading-xl: clamp(2.5rem, 5vw + 1rem, 5rem);
+  --line-height-heading-xl: clamp(4rem, 8vw, 6rem);
   --letter-spacing-heading-xl: clamp(-0.025em, -0.5vw - 0.01em, -0.0625em);
   --font-weight-heading-xl: 300;
 
